# Kivy

./: open_app.py  pyproject.toml  weather_sb.py
